# lakecat

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  GOAL.md  LAKECAT-SAIL.md  README.md  RELEASE.md  STATUS.md  TEXTPACK.md
.github/workflows/: ci.yml
ci/sail-patches/: 0001-Expose-Iceberg-table-status-conversion.patch  0002-Expose-Iceberg-planning-result-helpers.patch  0003-Expose-Iceberg-generated-model-module.patch
crates/lakecat-api/: Cargo.toml
crates/lakecat-api/src/: lib.rs  tests.rs
crates/lakecat-cli/: Cargo.toml
crates/lakecat-cli/src/: cli.rs  commands.rs  fixture.rs  http.rs  lineage.rs  main.rs  replay_evidence.rs  verify_handoff.rs  verify_proof.rs  verify_receipts.rs  verify_replay.rs
crates/lakecat-cli/src/fixture/: bootstrap.rs  credentials.rs  lineage.rs  listings.rs  management.rs  mod.rs  replay.rs  scan.rs  setup.rs  writers.rs
crates/lakecat-cli/src/tests/: bootstrap.rs  cli.rs  common.rs  credentials.rs  fixture.rs  handoff_artifact.rs  handoff_captured.rs  handoff_misc.rs  handoff_summary.rs  handoff_summary2.rs  lineage.rs  lineage2.rs  lineage3.rs  mod.rs  scan.rs  verify_runtime.rs
crates/lakecat-core/: Cargo.toml
crates/lakecat-core/src/: lib.rs  sail.rs
crates/lakecat-graph/: Cargo.toml
crates/lakecat-graph/src/: lib.rs  tests.rs
crates/lakecat-graph/src/grust_integration/: mod.rs  tests.rs
crates/lakecat-lineage/: Cargo.toml
crates/lakecat-lineage/src/: lib.rs  tests.rs
crates/lakecat-querygraph/: Cargo.toml
crates/lakecat-querygraph/src/: lib.rs  tests.rs
crates/lakecat-sail/: Cargo.toml
crates/lakecat-sail/src/: lib.rs
crates/lakecat-sail/src/catalog_provider/: mod.rs  tests.rs
crates/lakecat-sail/src/sail_integration/: mod.rs  tests.rs
crates/lakecat-security/: Cargo.toml
crates/lakecat-security/src/: lib.rs  tests.rs
crates/lakecat-security/src/typesec_integration/: mod.rs  tests.rs
crates/lakecat-service/: Cargo.toml
crates/lakecat-service/src/: commit.rs  error.rs  handlers.rs  identity.rs  lib.rs  lineage_summary.rs  location.rs  main.rs  outbox.rs  responses.rs  router.rs  scan.rs  state.rs  typesec_credential_issuer.rs  typesec_typedid.rs
crates/lakecat-service/src/evidence/: consts.rs  core_receipts.rs  credentials_view.rs  fields.rs  management.rs  mod.rs  outbox_evidence.rs  table_scan.rs
crates/lakecat-service/src/tests/: commit.rs  common.rs  credentials.rs  evidence_credentials.rs  evidence_management.rs  evidence_outbox_misc.rs  evidence_querygraph.rs  evidence_scan.rs  evidence_table.rs  evidence_view.rs  handlers_misc.rs  identity.rs  management.rs  mod.rs  outbox.rs  scan.rs  table.rs  view.rs
crates/lakecat-store/: Cargo.toml
crates/lakecat-store/src/: helpers.rs  lib.rs  memory.rs  memory_tests.rs  records.rs
crates/lakecat-store/src/turso_store/: mod.rs  tests.rs
crates/qglake-bundle/: Cargo.toml
crates/qglake-bundle/src/: lib.rs
docs/: OPUS1-DESIGN.md  OPUS1.md  OPUS2-DESIGN.md  OPUS2.md  RELEASES.md
docs/blog/: announcing-lakecat.md
docs/book/: PUBLISH.md  build.sh  check_epub_metadata.sh  check_pdf_layout.sh  cover.md  fix_epub_layout.sh  lakecat.md  lakesail.md  metadata.yaml  render-diagrams.mjs
docs/book/diagrams/: diagram-01.mmd  diagram-02.mmd  diagram-03.mmd  diagram-04.mmd  diagram-05.mmd  diagram-06.mmd  diagram-07.mmd  diagram-08.mmd
docs/completed/: OPUS1-DESIGN.md  OPUS1.md  OPUS2-DESIGN.md  OPUS2.md  README.md
scripts/: check-book-artifact-contract.sh  check-local-dependency-contract.sh  check-release-proof-contract.sh  check-release-readiness.sh  check-release-version-contract.sh  check-workflow-trigger-contract.sh  qglake-handoff-local.sh
