[workspace]
members = [
    "crates/lakecat-api",
    "crates/lakecat-cli",
    "crates/lakecat-core",
    "crates/lakecat-graph",
    "crates/lakecat-lineage",
    "crates/lakecat-querygraph",
    "crates/lakecat-sail",
    "crates/lakecat-security",
    "crates/lakecat-service",
    "crates/lakecat-store",
    "crates/qglake-bundle",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/querygraph/lakecat"

[workspace.dependencies]
async-trait = "0.1"
arrow-schema = "58.3.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
http = "1"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
turso = { version = "0.7.0-pre.10", default-features = false }
url = "2.5.8"
uuid = { version = "1", features = ["serde", "v4"] }

lakecat-api = { path = "crates/lakecat-api", version = "0.2.0" }
lakecat-core = { path = "crates/lakecat-core", version = "0.2.0" }
lakecat-graph = { path = "crates/lakecat-graph", version = "0.2.0" }
lakecat-lineage = { path = "crates/lakecat-lineage", version = "0.2.0" }
lakecat-querygraph = { path = "crates/lakecat-querygraph", version = "0.2.0" }
lakecat-sail = { path = "crates/lakecat-sail", version = "0.2.0" }
lakecat-security = { path = "crates/lakecat-security", version = "0.2.0" }
lakecat-store = { path = "crates/lakecat-store", version = "0.2.0" }
qglake-bundle = { path = "crates/qglake-bundle", version = "0.2.0" }

grust-graph = { package = "grust-graph", version = "0.11.0", default-features = false }
grust-turso = { package = "grust-turso", version = "0.11.0", default-features = false }
typesec = { version = "0.11.0", default-features = false }
sail-catalog = { git = "https://github.com/querygraph/sail.git", branch = "lakecat" }
sail-catalog-iceberg = { git = "https://github.com/querygraph/sail.git", branch = "lakecat" }
sail-common-datafusion = { git = "https://github.com/querygraph/sail.git", branch = "lakecat" }
sail-iceberg = { git = "https://github.com/querygraph/sail.git", branch = "lakecat" }
