[package]
name = "lakecat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lakecat-api = { workspace = true }
lakecat-core = { workspace = true }
lakecat-querygraph = { workspace = true }
reqwest = { workspace = true }
sail-iceberg = { path = "../../../sail/crates/sail-iceberg" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
lakecat-security = { workspace = true }
