[package]
name = "lakecat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # qglake-fixture feature depends on local-path sail-iceberg not on crates.io

[features]
default = []
qglake-fixture = ["dep:sail-iceberg"]

[dependencies]
chrono = { workspace = true }
lakecat-api = { workspace = true }
lakecat-core = { workspace = true }
lakecat-querygraph = { workspace = true }
reqwest = { workspace = true }
sail-iceberg = { path = "../../../sail/crates/sail-iceberg", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
lakecat-security = { workspace = true }
