[package]
name = "lakecat-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # optional deps grust-graph/grust-turso not yet on crates.io

[features]
default = []
grust-local = ["dep:grust-graph"]
grust-turso-local = ["grust-local", "dep:grust-turso"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
grust-graph = { workspace = true, optional = true, features = ["cypher", "memory"] }
grust-turso = { workspace = true, optional = true }
lakecat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
