[package]
name = "lakecat-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
lakecat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
