[package]
name = "lakecat-querygraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
lakecat-core = { workspace = true }
lakecat-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
