[package]
name = "lakecat-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
typesec-local = ["dep:typesec", "typesec/rbac"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
lakecat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typesec = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
