[package]
name = "lakecat-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LakeCat catalog state repository traits and Turso-backed store implementation"

[features]
default = []
turso-local = ["dep:turso"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
lakecat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
turso = { workspace = true, optional = true }
url = { workspace = true }
