[package]
name = "qglake-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QueryGraph bootstrap bundle wire format and verification types (serde-only, store-independent)"

[dependencies]
chrono = { workspace = true }
lakecat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
